# iot-core

./: .gitignore  CMakeLists.txt  Makefile  README.md  SampleConfig.h  SampleConfig.h.in
examples/: README.md  cpu_mqtt.py  cpu_mqtt.py~  ec_private.pem  ec_public.pem  requirements.txt  requirements.txt~  rsa_cert.pem  rsa_private.pem  sms.py  sms.py~  tgpio.py  tgpio.py~
examples/bkp/: ec_private.pem
includes/: iot.hpp
src/: main.cpp
